@@ -280,6 +280,13 @@
       />
 
   <browser:page
+      for="Products.minaraad.interfaces.INewsItem"
+      permission="zope2.View"
+      name="newsitem_view"
+      template="newsitem_view.pt"
+      />
+
+  <browser:page
       for="Products.minaraad.interfaces.INewsLetter"
       permission="zope2.View"
       name="newsletter_view"
