@@ -1,0 +1,21 @@
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"
+      xmlns:tal="http://xml.zope.org/namespaces/tal"
+      xmlns:metal="http://xml.zope.org/namespaces/metal"
+      xmlns:i18n="http://xml.zope.org/namespaces/i18n"
+      lang="en"
+      metal:use-macro="context/main_template/macros/master"
+      i18n:domain="minaraad">
+<body>
+
+<metal:content-core fill-slot="content-core">
+  <div class="bodytext"
+       tal:content="structure context/getBody"
+       tal:condition="context/getBody" />
+
+  <tal:block tal:define="obj nocall: context">
+    <div metal:use-macro="context/contactperson_macros/macros/show_coord_authors"
+         tal:omit-tag="" />
+  </tal:block>
+</metal:content-core>
+</body>
+</html>
