@@ -1,28 +1,0 @@
-<html xmlns="http://www.w3.org/1999/xhtml"
-   xml:lang="en-US"
-   lang="en-US"
-   i18n:domain="minaraad">
-
-   <metal:block use-macro="context/global_defines/macros/defines" />
-   <body>
-      <metal:block metal:define-macro="body">
-         <h1 tal:content="context/Title" />
-
-         <div class="documentDescription"
-            tal:condition="context/Description"
-            tal:content="context/Description" />
-
-         <!-- Text -->
-         <div class="bodytext"
-            tal:content="structure context/getBody"
-            tal:condition="context/getBody" />
-
-         <!-- Contactperson -->
-        <tal:block tal:define="obj nocall: context">
-          <div metal:use-macro="context/contactperson_macros/macros/show_coord_authors"
-               tal:omit-tag="" />
-        </tal:block>
-      </metal:block>
-      <metal:block metal:define-macro="folderlisting" />
-    </body>
-</html>
